[package]
name = "ironfish_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bellman = { version = "0.13.1" }
blake2b_simd = "1.0.0"
blake2s_simd = "1.0.0"
bls12_381 = "0.7.0"
byteorder = "1.4.3"
chacha20poly1305 = "0.9.0"
colored = "2.0.0"
crypto_box = { version = "0.7.2", features = ["std"] }
ff = "0.12.0"
group = "0.12.0"
ironfish_zkp = { git = "https://github.com/hairtail/ironfish-zkp"}
jubjub = "0.9.0"
lazy_static = "1.4.0"
libc = "0.2.126" # sub-dependency that needs a pinned version until a new release of cpufeatures: https://github.com/RustCrypto/utils/pull/789 
rand = "0.8.5"
tiny-bip39 = "0.8"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
